tests/ui/type/type-shadow.stderr
error[E0308]: mismatched types
  --> $DIR/type-shadow.rs:6:20
   |
LL |         let y: Y = "hello";
   |                -   ^^^^^^^ expected `isize`, found `&str`
   |                |
   |                expected due to this

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
